--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,8 @@
 </head>
 <body>
   <%- include("_partials/navbar") %>
+  <%- include("_partials/login_modal") %>
+  <%- include("_partials/signup_modal") %>
 
   <%- body %>
 </body>
