--- a/views/_partials/navbar.ejs
+++ b/views/_partials/navbar.ejs
@@ -1,24 +1,31 @@
-<nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="/">Carousel</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <form class="form-inline my-2 my-lg-20">
+      <input class="form-control mr-sm-2" type="search" placeholder="Find items" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
     <ul class="navbar-nav ml-auto">
       <% if (currentUser) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/my/profile">My Profile</a>
+          <a class="nav-link" href="/my/orders">My Orders</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/my/products">My Products</a>
         </li>
         <li class="nav-item">
           <a id="logout-btn" class="nav-link">Logout</a>
         </li>
       <% } else { %>
         <li class="nav-item">
-          <a class="nav-link" href="/auth/signup">Signup</a>
+          <a class="nav-link" data-toggle="modal" data-target="#signup-modal">Signup</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/auth/login">Login</a>
+          <a class="nav-link" data-toggle="modal" data-target="#login-modal">Login</a>
         </li>
       <% } %>
     </ul>
