--- a/views/_partials/navbar.ejs
+++ b/views/_partials/navbar.ejs
@@ -12,6 +12,9 @@
     <ul class="navbar-nav ml-auto">
       <% if (currentUser) { %>
         <li class="nav-item">
+          <a class="nav-link" href="/auction/new">Post</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/my/orders">My Orders</a>
         </li>
         <li class="nav-item">
