--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,7 @@
   <%- include("_partials/navbar") %>
   <%- include("_partials/login_modal") %>
   <%- include("_partials/signup_modal") %>
+  <%- include("_partials/buy_modal") %>
 
   <%- body %>
 </body>
